--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -69,10 +69,10 @@
                     </ul>
                     <div class="tab-content" id="myTabContent">
                         <div class="tab-pane fade show active" id="html" role="tabpanel" aria-labelledby="html-tab">
-                            <textarea readonly class="form-control" rows="5"></textarea>
+                            <textarea readonly class="form-control" rows="5"[(ngModel)]="html">html</textarea>
                         </div>
                         <div class="tab-pane fade" id="json" role="tabpanel" aria-labelledby="json-tab">
-                            <textarea readonly class="form-control" rows="5"></textarea>
+                            <textarea readonly class="form-control" rows="5"[(ngModel)]="json">json</textarea>
                         </div>
                     </div>
                 </div>
