--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
             <div class="dropdown-menu">
                 <a class="dropdown-item">Abrir</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Guardar</a>
+                <a (click)="saveCSharp()" class="dropdown-item" href="#">Guardar</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">Nueva Pestaña</a>
             </div>
@@ -21,12 +21,12 @@
                 <a (click)="saveHtml()" class="dropdown-item" href="#">Exportar html</a>
                 <a (click)="saveJson()" class="dropdown-item" href="#">Exportar json</a>
                 <div class="dropdown-divider"></div>
-                <a (click)="saveErrorsFile()" class="dropdown-item">Errores</a>
+                <a (click)="saveErrorsFile()" class="dropdown-item" href="#">Errores</a>
             </div>
         </li>
         <div class="texto"></div>
         <li class="nav-item">
-            <button (click)="analyze(cSharpInput)" class="btn btn-outline-light" aria-haspopup="true"
+            <button (click)="analyze()" class="btn btn-outline-light" aria-haspopup="true"
                 aria-expanded="false">Analizar</button>
         </li>
     </ul>
@@ -38,12 +38,12 @@
             <ul class="nav nav-tabs" id="myTab" role="tablist">
                 <li class="nav-item">
                     <a class="nav-link active" id="t1" data-toggle="tab" href="#tab1" role="tab" aria-controls="tab1"
-                        aria-selected="true">Pestaña 1</a>
+                        aria-selected="true">{{tabName}}</a>
                 </li>
             </ul>
             <div class="tab-content">
                 <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="t1">
-                    <textarea class="form-control" rows="16" #cSharpInput></textarea>
+                    <textarea id="cSharpText" class="form-control" rows="18" [(ngModel)]="cSharp">cSharp</textarea>
                 </div>
             </div>
         </div>
@@ -69,10 +69,10 @@
                     </ul>
                     <div class="tab-content" id="myTabContent">
                         <div class="tab-pane fade show active" id="html" role="tabpanel" aria-labelledby="html-tab">
-                            <textarea readonly class="form-control" rows="5"[(ngModel)]="html">html</textarea>
+                            <textarea readonly class="form-control" rows="7" [(ngModel)]="html">html</textarea>
                         </div>
                         <div class="tab-pane fade" id="json" role="tabpanel" aria-labelledby="json-tab">
-                            <textarea readonly class="form-control" rows="5"[(ngModel)]="json">json</textarea>
+                            <textarea readonly class="form-control" rows="7" [(ngModel)]="json">json</textarea>
                         </div>
                     </div>
                 </div>
@@ -80,4 +80,7 @@
         </div>
     </div>
 </div>
+<footer class="text-center py-2">
+    © 2020 Copyright: <a href="https://github.com/FerJoTello/">Fernando Tello</a>
+</footer>
 <router-outlet></router-outlet>
