--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,14 @@ body
 {
     color: #0c2461;
 }
+footer{
+    background-color: #0c2461;
+    color: white;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
 .title
 {
     color: white;
